--- a/assets/css/markdown.css
+++ b/assets/css/markdown.css
@@ -2026,3 +2026,9 @@
     filter: invert(50%);
   }
 }
+
+/* Global */
+
+.markdown-body :is(h1, h2, h3, h4, h5, h6) a {
+  text-decoration: none !important;
+}
